homework_lesson05/psql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: gb5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: pvc-nfs
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 500m
            memory: 500Mi
      volumes:
      - name: pvc-nfs
        persistentVolumeClaim:
          claimName: pvc-nfs
