homework_lesson05/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: lesson05
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres

---
apiVersion: v1
kind: Service
metadata:
  name: redmine
  namespace: lesson05
spec:
  ports:
  - port: 30000
    targetPort: 3000
  selector:
    app: redmine
  type: ClusterIP
